# TLMBoy

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  coverage_report.bash  lint.bash  source_me.bash
.github/workflows/: build.yml
roms/: dmg-acid2.gb  dummy.gb  flappyboy.gb
roms/blarrgs/: halt_bug.gb
roms/blarrgs/cgb_sound/: cgb_sound.gb
roms/blarrgs/cgb_sound/rom_singles/: 01-registers.gb  02-len ctr.gb  03-trigger.gb  04-sweep.gb  05-sweep details.gb  06-overflow on trigger.gb  07-len sweep period sync.gb  08-len ctr during power.gb  09-wave read while on.gb  10-wave trigger while on.gb  11-regs after power.gb  12-wave.gb
roms/blarrgs/cpu_instrs/: cpu_instrs.gb
roms/blarrgs/cpu_instrs/individual/: 01-special.gb  02-interrupts.gb  03-op sp,hl.gb  04-op r,imm.gb  05-op rp.gb  06-ld r,r.gb  07-jr,jp,call,ret,rst.gb  08-misc instrs.gb  09-op r,r.gb  10-bit ops.gb  11-op a,(hl).gb
roms/blarrgs/dmg_sound/: dmg_sound.gb
roms/blarrgs/dmg_sound/rom_singles/: 01-registers.gb  02-len ctr.gb  03-trigger.gb  04-sweep.gb  05-sweep details.gb  06-overflow on trigger.gb  07-len sweep period sync.gb  08-len ctr during power.gb  09-wave read while on.gb  10-wave trigger while on.gb  11-regs after power.gb  12-wave write while on.gb
roms/blarrgs/instr_timing/: instr_timing.gb
roms/blarrgs/interrupt_time/: interrupt_time.gb
roms/blarrgs/mem_timing/: mem_timing.gb
roms/blarrgs/mem_timing-2/: mem_timing.gb
roms/blarrgs/mem_timing-2/rom_singles/: 01-read_timing.gb  02-write_timing.gb  03-modify_timing.gb
roms/blarrgs/mem_timing/individual/: 01-read_timing.gb  02-write_timing.gb  03-modify_timing.gb
roms/blarrgs/oam_bug/: oam_bug.gb
roms/blarrgs/oam_bug/rom_singles/: 1-lcd_sync.gb  2-causes.gb  3-non_causes.gb  4-scanline_timing.gb  5-timing_bug.gb  6-timing_no_bug.gb  7-timing_effect.gb  8-instr_effect.gb
src/: apu.cpp  apu.h  bus.cpp  bus.h  cartridge.cpp  cartridge.h  common.cpp  common.h  cpu.cpp  cpu.h  cpu_jumptable.cpp  cpu_ops.cpp  debug.h  dmg_rom_data.h  game_info.cpp  game_info.h  gb_const.h  gb_top.cpp  gb_top.h  gdb_server.cpp  gdb_server.h  generic_memory.cpp  generic_memory.h  interrupt_module.h  io_registers.cpp  io_registers.h  joypad.cpp  joypad.h  main.cpp  options.cpp  options.h  ppu.cpp  ppu.h  reg_file.h  serial.cpp  serial.h  symfile_tracer.cpp  symfile_tracer.h  tcp_server.cpp  tcp_server.h  (+4 more)
tests/: CMakeLists.txt  boot_checker_gdb.py  test_blarrg_cpuinstr01.cpp  test_blarrg_cpuinstr02.cpp  test_blarrg_cpuinstr03.cpp  test_blarrg_cpuinstr04.cpp  test_blarrg_cpuinstr05.cpp  test_blarrg_cpuinstr06.cpp  test_blarrg_cpuinstr07.cpp  test_blarrg_cpuinstr08.cpp  test_blarrg_cpuinstr09.cpp  test_blarrg_cpuinstr10.cpp  test_blarrg_cpuinstr11.cpp  test_boot.cpp  test_boot_checker.cpp  test_boot_states.cpp  test_bus.cpp  test_cartridge.cpp  test_cpu.cpp  test_dmg_acid2.cpp  test_gdb.cpp  test_memory.cpp  test_ppu.cpp  test_symfile_tracer.cpp
tests/gdb/: boot_checker_gdb.py  gdb_commands.bash
